<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iclickcy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check Updates</string>
    <string name="coupon_code">Enter Coupon Code</string>
    <string name="action_logout">Logout</string>
    <string name="btnTextForValidateByCouponCode">Validate</string>
 	
 	
 	<!-- welcome_screen.xml -->
 	<string name="welcomeScreen_subText1">Welcome to iclickcy.com</string>
 	<string name="welcomeScreen_subText2">Your advertising platform</string>
 	<string name="welcomeScreen_subText3">Loading. Please wait...</string>
 	
 	<!-- login.xml -->
 	<string name="user_id">User ID</string>
 	<string name="user_id_hint">Enter your iclickcy.com Merchant ID</string>
 	<string name="password">Password</string>
 	<string name="password_hint">Enter your iclickcy.com Password</string>
 	<string name="btnLogin_text">Press to Login</string>
 	<string name="login_welcome_sub1">Welcome to iclickcy.com</string>
 	<string name="login_welcome_sub2">Login to validate your coupons</string>
 	<string name="login_welcome_sub3">and view their details</string>
 	
 	<!-- fragment_my_coupons.xml -->
 	<string name="subTabValidated">VALIDATED</string>
 	<string name="subTabNonValidated">NON-VALIDATED</string>
 	<string name="subTabAll">ALL</string>
 	
 	<!-- fragment_validation.xml -->
 	<string name="subTabValidateByCouponCode">Coupon Code</string>
 	<string name="subTabValidateByQRCode">QR Code</string>
</resources>