<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >
    </RelativeLayout>

    <!-- Content below header and above footer -->

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/welcomeScreen_subText_1"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:src="@drawable/aditplanet_splash_logo2" />

        <TextView
            android:id="@+id/welcomeScreen_subText_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/welcomeScreen_subText1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeScreen_subText_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/welcomeScreen_subText_1"
            android:gravity="center"
            android:text="@string/welcomeScreen_subText2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/welcomeScreen_subText_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/welcomeScreen_subText_2"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/welcomeScreen_subText3"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>